--- a/WebDirectory.web/index.html
+++ b/WebDirectory.web/index.html
@@ -4,21 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebDirectory</title>
-    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<header>
-    <h1>WebDirectory</h1>
-    <input type="text" id="search-input" placeholder="Search by name...">
-</header>
-<main>
-    <section id="entries-list">
+<div id="app">
+    <h1>WebDirectory.web</h1>
+    <label for="filterSelect">Filtrer par service :</label>
+    <select id="filterSelect">
+        <option value="">Tous les services</option>
+    </select>
+    <ul id="entriesList"></ul>
+</div>
 
-    </section>
-    <section id="entry-detail">
 
-    </section>
-</main>
 <script src="js/app.js"></script>
 </body>
 </html>
