--- a/WebDirectory.web/index.html
+++ b/WebDirectory.web/index.html
@@ -5,11 +5,7 @@
     <title>Annuaire</title>
     <script type="module" src="js/app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.min.js"></script>
-    <style>
-        .hidden {
-            display: none;
-        }
-    </style>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <div id="app">
