--- a/WebDirectory.web/index.html
+++ b/WebDirectory.web/index.html
@@ -70,9 +70,12 @@
 
 <script id="entry-detail-template" type="text/x-handlebars-template">
     <h2>{{nom}} {{prenom}}</h2>
-    <p>Departments: {{departements}}</p>
+    <p>Départment: {{departements}}</p>
+    <p>Numéro de téléphone personnel: {{NuméroTelephone}}</p>
+    <p>Numéro de téléphone bureau: {{NuméroTelephoneBureau}}</p>
     <p>Email: <a href="mailto:{{links.email}}" target="_blank">{{links.email}}</a></p>
     <img src="{{links.img}}" alt="{{prenom}} {{nom}}">
 </script>
+
 </body>
 </html>
